--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "task-angular2-vangel-apostolov",
   "version": "1.0.0",
-  "description": "Angular 2 architecture components demo project",
+  "description": "Angular 2 task",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --inline --progress --port 8080",
